# scree

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: barely_interactive_path_existance_checker.rs  verify_current_pathlist.rs
physis-re-exports/: Cargo.toml
physis-re-exports/src/: common.rs  crc.rs  lib.rs
physis-re-exports/src/sqpack/: index.rs  mod.rs
src/: asset_path.rs  category.rs  index_type.rs  lib.rs  macro_rules.rs  main.rs  platform.rs  repository_type.rs
